# server/src/api/poll/poll.routes.ts
@@ -1,11 +1,13 @@
 import { Router } from 'express';
-import { createPoll, findPollBySlug, updatePoll } from './poll.controller';
+import { findPolls, createPoll, findPollBySlug, updatePoll, deletePoll } from './poll.controller';
 
 const pollRouter = Router();
 
 pollRouter
   .post('/', createPoll)
+  .post('/search', findPolls)
   .get('/:pollSlug', findPollBySlug)
-  .post('/:pollSlug', updatePoll);
+  .post('/:pollId', updatePoll)
+  .delete('/:pollId', deletePoll);
 
   export default pollRouter;
