# server/src/services/poll-service/poll-service.ts
@@ -3,24 +3,53 @@
  */
 import Poll, { PollModel } from 'models/poll';
 import { DatabaseError } from 'services/error-handler';
-import { createQuestions } from 'services/question-service';
-import { PollFindQuery } from './poll-service.types';
+import { PollFindQueryDB, PollFindQuery } from './poll-service.types';
+
+const transformFilter = (filter:PollFindQuery):PollFindQueryDB => {
+  const dupFilter:PollFindQuery = { ...filter };
+  const dbFilter:PollFindQueryDB = {};
+
+  if (dupFilter.id) {
+    dbFilter._id = dupFilter.id;
+    delete dupFilter.id;
+  }
+
+  return {
+    ...dupFilter,
+    ...dbFilter,
+  };
+}
+
+export const findPolls = async (filter:PollFindQuery) => {
+  try {
+    const polls = await Poll
+                          .find(transformFilter(filter))
+                          .populate('questions')
+                          .populate('questions.answers');
+    return polls.map(poll => poll.toJSON());
+  } catch (error) {
+    throw new DatabaseError(error, 'Error fetching poll' , { filter });
+  }
+}
+
+export const findPoll = async (filter:PollFindQuery) => {
+  try {
+    const poll = await Poll
+                          .findOne(transformFilter(filter))
+                          .populate('questions')
+                          .populate('questions.answers');
+    return poll;
+  } catch (error) {
+    throw new DatabaseError(error, 'Error fetching poll' , { filter });
+  }
+}
 
 export const createPoll = async (payload:PollModel) => {
-  const { title, status, slug, questions } = payload;
+  const { title, status, slug } = payload;
   delete payload.questions;
 
   try {
     const poll = await Poll.create({ title, status, slug });
-
-    if (questions) {
-      const questionsPayload = questions.map(question => ({...question, poll: poll._id}));
-      const questionsRes = await createQuestions(questionsPayload);
-      poll.questions = questionsRes;
-      poll.populate('questions', 'questions.answers');
-      await poll.save();
-    }
-
     return poll.toJSON();
   } catch (error) {
     throw new DatabaseError(error, 'Error creating poll');
@@ -29,18 +58,23 @@ export const createPoll = async (payload:PollModel) => {
 
 export const updatePoll = async (filter:PollFindQuery, payload:PollModel) => {
   try {
-    return await Poll.findOneAndUpdate(filter, payload, {
+    const poll = await Poll.findOneAndUpdate(transformFilter(filter), transformFilter(payload), {
       new: true
     });
+    return poll.toJSON();
   } catch (error) {
     throw new DatabaseError(error, 'Error updating poll', { filter, payload });
   }
 }
 
-export const findPollBySlug = async (slug:string) => {
+export const deletePoll = async (id:string) => {
+  const filter = { _id: id };
   try {
-    return await Poll.findOne({ slug }).populate('questions');
+    const { deletedCount } = await Poll.deleteOne(filter);
+    return {
+      rowsAffected: deletedCount
+    }
   } catch (error) {
-    throw new DatabaseError(error, 'Error fetching poll' , { filter: { slug }});
+    throw new DatabaseError(error, 'Error deleting poll' , { filter });
   }
 }
